--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       </header>
       <section>
 	  <h3>Aufgabe 1</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://raw.githubusercontent.com/beuth.programming.tutorium/raw/gh-pages/tutorium/exercises/pr1/aufgabe1.pdf"></iframe>
+	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe1.pdf?raw=true"></iframe>
 	  <h3>Aufgabe 2</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://raw.githubusercontent.com/beuth.programming.tutorium/raw/gh-pages/tutorium/exercises/pr1/aufgabe2.pdf"></iframe>
+	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe2.pdf?raw=true"></iframe>
 	  <h3>Aufgabe 3</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://raw.githubusercontent.com/beuth.programming.tutorium/raw/gh-pages/tutorium/exercises/pr1/aufgabe3.pdf"></iframe>
+	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe3.pdf?raw=true"></iframe>
 	  <h3>Aufgabe 4</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://raw.githubusercontent.com/beuth.programming.tutorium/raw/gh-pages/tutorium/exercises/pr1/aufgabe4.pdf"></iframe>
+	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe4.pdf?raw=true"></iframe>
 	  <h3>Aufgabe 5</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://raw.githubusercontent.com/kibotu/beuth.programming.tutorium/raw/gh-pages/tutorium/exercises/pr1/aufgabe5.pdf"></iframe>
+	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe5.pdf?raw=true"></iframe>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/kibotu">kibotu</a></p>
