pdf viewer test

--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
       </header>
       <section>
 	  <h3>Aufgabe 1</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe1.pdf?raw=true"></iframe>
-	  <h3>Aufgabe 2</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe2.pdf?raw=true"></iframe>
+	  
+	  <!--<iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe1.pdf"></iframe>-->
+	  <iframe id="viewer" src = "/ViewerJS/#../../tutorium/exercises/pr1/aufgabe1.pdf" width='400' height='300' allowfullscreen webkitallowfullscreen></iframe> 
+	  <h3>Aufgabe 2</h3> 
 	  <h3>Aufgabe 3</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe3.pdf?raw=true"></iframe>
 	  <h3>Aufgabe 4</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe4.pdf?raw=true"></iframe>
-	  <h3>Aufgabe 5</h3>
-	  <iframe frameBorder="0" width="640" height="500" src="https://github.com/kibotu/beuth.programming.tutorium/blob/gh-pages/tutorium/exercises/pr1/aufgabe5.pdf?raw=true"></iframe>
-      </section>
+	 <h3>Aufgabe 5</h3>
+	   </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/kibotu">kibotu</a></p>
       </footer>
